# iced_tabs

./: Cargo.toml  readme.md
examples/: simple.rs  tabs.rs
src/: lib.rs  status.rs  style.rs  tab.rs  tab_bar.rs
src/tab_bar/: tab_content.rs  tab_row.rs
