[package]
name = "iced_tabs"
version = "0.1.0"
edition = "2024"
description = "A tab bar widget for iced GUI applications"
license = "MIT"
repository = "https://github.com/iced-rs/iced_tabs"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "svg"] }
iced_fonts = { version = "0.3.0", features = ["codicon"] }

